фон нихт арбайтен

--- a/src/Components/Background/Background.scss
+++ b/src/Components/Background/Background.scss
@@ -1,6 +1,6 @@
 .back-ground-class{
-    width: 300px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
     .back-ground-inner{
         width: 100%;
         height: 100%;
