--- a/src/Components/Background/Background.scss
+++ b/src/Components/Background/Background.scss
@@ -1,9 +1,16 @@
 .back-ground-class{
     width: 100%;
     height: 100%;
-    .back-ground-inner{
+    position: relative;
+    .back-ground-current, .back-ground-next{
         width: 100%;
         height: 100%;
         background-size: cover; 
+        background-position-x: center;
+        background-position-y: top;
+        position: absolute;
+        left: 0;
+        top: 0;
+    
     }
 }
