--- a/src/Containers/backgroundContainer.scss
+++ b/src/Containers/backgroundContainer.scss
@@ -5,4 +5,12 @@
     height: 100%;
     top:  0;
     left: 0;
+    .background-container-overlay{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0,0,0, 0.5);
+    }
 }
