--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,16 @@
 @import "./Routes/Routes.scss";
 @import "~bootstrap/dist/css/bootstrap.css";
 
+.no-select {
+  &, & *{
+  -webkit-touch-callout: none!important;
+  -webkit-user-select: none!important;
+  -khtml-user-select: none!important;
+  -moz-user-select: none!important;
+  -ms-user-select: none!important;
+  user-select: none!important;
+  }
+}
 
 body {
   margin: 0;
