--- a/src/Routes/game/game.scss
+++ b/src/Routes/game/game.scss
@@ -1,4 +1,26 @@
+@import "../../Styles/Mixins.scss";
+
 .game-form{
     position: relative;
     z-index: 1001;
 }
+.game-menu-items{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    .game-menu-item{
+        font-size: 30px;
+        margin-bottom: 10px;
+        font-weight: bolder;
+        cursor: pointer;
+        @include use-transition($fast);
+        &:hover{
+            @include use-transformed(scale(1.1));
+
+        }
+    } 
+}   
